fixed grid issues

--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -33,7 +33,7 @@
   {% endif %}
 
   <div class="grid-uniform grid-link__container">
-    {% assign grid_item_width = 'wide--one-third large--one-half medium-down--one-half' %}
+    {% assign grid_item_width = 'medium--one-half large--one-third' %}
     {%- assign product_width = 335 -%}
 
     {% for product in collection.products %}
