--- a/templates/page.list-collections.liquid
+++ b/templates/page.list-collections.liquid
@@ -25,7 +25,7 @@
 
 {% if uses_minimal_framework contains 'Liquid error' %}
   {% assign uses_minimal_framework = false %}
-  {% assign grid_item_width = 'large--one-quarter large-up--one-quarter medium--one-third medium-up--one-third small--one-half large--col-3 medium--col-4 small--col-6' %}
+  {% assign grid_item_width = 'medium--one-half large--one-third' %}
 {% else %}
   {% assign uses_minimal_framework = true %}
   {% assign grid_item_width = 'span3' %}
